--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.8.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17"
   }
 }
